crates/mun_codegen/src/snapshots/test__shadowing.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn foo(a:i32) -> i32 {\n    let a = a+1;\n    {\n        let a = a+2;\n    }\n    a+3\n}\n\npub fn bar(a:i32) -> i32 {\n    let a = a+1;\n    let a = {\n        let a = a+2;\n        a\n    }\n    a+3\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo.1 = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo.1 addrspace(4)*]

define i32 @foo(i32 %0) {
body:
  %add = add i32 %0, 1
  %add7 = add i32 %add, 3
  ret i32 %add7
}

define i32 @bar(i32 %0) {
body:
  %add = add i32 %0, 1
  %add4 = add i32 %add, 2
  %add9 = add i32 %add4, 3
  ret i32 %add9
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::i32>::name" = private unnamed_addr constant [10 x i8] c"core::i32\00"
@"type_info::<core::i32>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\17yzt\19\D62\17\D25\95C\17\88[\FA", [10 x i8]* @"type_info::<core::i32>::name", i32 32, i8 4, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::i32>"]

